# quirky

./: README.md  pyproject.toml  quirky.py
notebooks/: demo.ipynb
quirky/: __init__.py
quirky/examples/: example_1.ipynb  quirky.py
scripts/: demo_usage.py
