[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quirky"
version = "0.1.0"
description = "Explainable Anomaly Detection with SHAP Interpretation"
readme = "README.md"
authors = [{name = "Edward Johnson"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["anomaly", "detection", "shap", "explainable", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "shap>=0.42",
    "matplotlib>=3.6",
    "seaborn>=0.12"
]

[tool.setuptools.packages]
find = {include = ["quirky*"]}
